samples/_failures_safe/1761713996_578ddb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7dca7375.c: In function ‘print_token’:
./samples/SAFE/__tmp_7dca7375.c:172:5: error: expected expression at end of input
  172 |     const char *type_names[] =
      |     ^~~~~
./samples/SAFE/__tmp_7dca7375.c:172:5: error: expected declaration or statement at end of input
